Prevent y overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,4 +8,6 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    height: 100%;
+    overflow-y: hidden;
 }
